--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/default_margin"
+    android:background="@color/white"
     tools:context=".ui.HomeFragment">
 
     <androidx.cardview.widget.CardView
