--- a/app/src/main/res/layout/fragment_detail_meal.xml
+++ b/app/src/main/res/layout/fragment_detail_meal.xml
@@ -119,7 +119,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/proteinTv" />
 
             <TextView
-                android:id="@+id/fatTv"
+                android:id="@+id/text_fat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin"
@@ -136,7 +136,7 @@
                 android:text="@string/fat_gram"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/carbGramTv"
-                app:layout_constraintTop_toTopOf="@+id/fatTv" />
+                app:layout_constraintTop_toTopOf="@+id/text_fat" />
 
             <ProgressBar
                 android:id="@+id/fatProgressBar"
@@ -149,7 +149,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/carbGramTv"
                 app:layout_constraintStart_toStartOf="@+id/proteinTv"
-                app:layout_constraintTop_toBottomOf="@+id/fatTv" />
+                app:layout_constraintTop_toBottomOf="@+id/text_fat" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
