--- a/app/src/main/res/layout/item_meal.xml
+++ b/app/src/main/res/layout/item_meal.xml
@@ -8,48 +8,55 @@
         android:id="@+id/mealIcon1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@+id/mealNameTv"
+        app:layout_constraintEnd_toStartOf="@+id/text_mealName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/mealNameTv"
+        android:id="@+id/text_mealName"
         style="@style/subTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="test"
         app:layout_constraintStart_toEndOf="@+id/mealIcon1"
-        app:layout_constraintTop_toTopOf="@id/mealIcon1" />
+        app:layout_constraintBottom_toTopOf="@id/guide_center_vertical"/>
 
     <TextView
-        android:id="@+id/amountTv"
+        android:id="@+id/text_amount"
         style="@style/subBodyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1g"
-        app:layout_constraintStart_toStartOf="@+id/mealNameTv"
-        app:layout_constraintTop_toBottomOf="@+id/mealNameTv" />
+        app:layout_constraintStart_toStartOf="@+id/text_mealName"
+        app:layout_constraintTop_toBottomOf="@+id/guide_center_vertical" />
 
 
     <TextView
-        android:id="@+id/calsTv"
+        android:id="@+id/text_cals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/calories"
         style="@style/bodyText"
-        app:layout_constraintBaseline_toBaselineOf="@id/mealNameTv"
+        app:layout_constraintBaseline_toBaselineOf="@id/text_mealName"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/calsAmountTv"
+        android:id="@+id/text_calsAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="test"
         style="@style/subBodyText"
         android:textColor="@color/color_red"
-        app:layout_constraintBaseline_toBaselineOf="@+id/amountTv"
-        app:layout_constraintEnd_toEndOf="@+id/calsTv" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/text_amount"
+        app:layout_constraintEnd_toEndOf="@+id/text_cals" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
