--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,23 +3,22 @@
     <style name="Theme.NutritionsApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/darkGreenTheme</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/darkGreenTheme</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal</item>
         <item name="colorSecondaryVariant">@color/light_gray</item>
         <item name="colorOnSecondary">@color/white</item>
-
         <!-- Status bar color. -->
-
         <item name="android:statusBarColor">?attr/colorOnPrimary</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
     </style>
 
     <style name="chip" parent="Widget.Material3.Chip.Filter">
         <item name="chipStrokeColor">@color/light_gray</item>
-        <item name="chipSurfaceColor">?attr/colorSurface</item>
-        <item name="chipBackgroundColor">@color/chip_teal</item>
+        <item name="chipSurfaceColor">@color/teal</item>
+        <item name="chipBackgroundColor">@color/bg_chip_state_list</item>
+        <item name="chipStrokeWidth">1dp</item>
     </style>
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
@@ -52,6 +51,18 @@
         <item name="android:textSize">@dimen/large_body_size</item>
         <item name="android:textColor">@color/black</item>
         <item name="alpha">.4</item>
+    </style>
+
+    <style name="cardView" parent="Widget.Material3.CardView.Outlined">
+        <item name="cardBackgroundColor">@android:color/white</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="backgroundColor">@color/white</item>
+        <item name="cardElevation">0dp</item>
+        <item name="strokeColor">@color/light_gray</item>
+    </style>
+
+    <style name="cardViewWithBackground" parent="cardView">
+        <item name="cardBackgroundColor">@color/lightGreenTheme</item>
     </style>
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title" />
