--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -55,4 +55,19 @@
     </style>
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title" />
+
+
+    <!--Bottom Navigation Style-->
+<!--    <style name="Theme.App" parent="Theme.Material3.DayNight.NoActionBar">-->
+<!--        <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>-->
+<!--    </style>-->
+
+<!--    <style name="Widget.App.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">-->
+<!--        <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>-->
+<!--    </style>-->
+
+<!--    <style name="ThemeOverlay.App.BottomNavigationView" parent="">-->
+<!--        <item name="colorSurface">@color/yello_light</item>-->
+<!--        <item name="colorOnSurfaceVariant">@color/yello_thin</item>-->
+<!--    </style>-->
 </resources>
