--- a/app/src/main/res/drawable/item_style.xml
+++ b/app/src/main/res/drawable/item_style.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
   <solid android:color="@color/primaryGrey" />
   <corners android:topLeftRadius="12dp" android:bottomLeftRadius="12dp" />
+  <stroke android:color="@color/light_gray" android:width="1dp"/>
 </shape>
