--- a/app/src/main/res/drawable/meal_shape.xml
+++ b/app/src/main/res/drawable/meal_shape.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/corner_radius_12dp"/>
-    <solid android:color="@color/lightGreenTheme"/>
+    <solid android:color="@color/yello_light"/>
     <stroke android:color="@color/light_gray" android:width="1dp"/>
 </shape>
