--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,5 +26,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
-        app:menu="@menu/menu_bottom_nav" />
+        app:menu="@menu/menu_bottom_nav"
+        app:backgroundTint="@color/yello_light"
+        app:itemTextColor="@color/bottom_item_color"
+        app:itemIconTint="@color/bottom_item_color"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
