--- a/app/src/main/res/layout/fragment_detail_meal.xml
+++ b/app/src/main/res/layout/fragment_detail_meal.xml
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_margin"
                 android:text="@string/carbs"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +82,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/small_margin"
                 android:progress="10"
-                app:indicatorColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/carbGramTv"
                 app:layout_constraintStart_toStartOf="@+id/carbTv"
                 app:layout_constraintTop_toBottomOf="@+id/carbTv" />
@@ -93,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin"
                 android:text="@string/protein"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/carbTv"
                 app:layout_constraintTop_toBottomOf="@id/carbProgressBar" />
@@ -124,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin"
                 android:text="@string/fat"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/carbTv"
                 app:layout_constraintTop_toBottomOf="@id/proteinProgressBar" />
@@ -171,7 +170,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_margin"
                 android:text="@string/ingredients"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:textStyle="bold" />
 
             <View
@@ -186,7 +185,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_margin"
                 android:text="@string/servings_number"
-                android:textColor="@color/black" />
+                android:textColor="@color/text_color" />
 
             <View
                 android:id="@+id/view2"
@@ -203,7 +202,7 @@
                 android:layout_marginEnd="@dimen/default_margin"
                 android:lineHeight="22dp"
                 android:text="@string/app_name"
-                android:textColor="@color/black" />
+                android:textColor="@color/text_color" />
 
             <View
                 android:id="@+id/view4"
@@ -217,7 +216,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_margin"
                 android:text="@string/preparation"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:textStyle="bold" />
 
             <View
@@ -235,7 +234,7 @@
                 android:layout_marginEnd="@dimen/default_margin"
                 android:lineHeight="22dp"
                 android:text="@string/app_name"
-                android:textColor="@color/black" />
+                android:textColor="@color/text_color" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
