--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2000"
-                android:textColor="?attr/colorOnPrimary"
+                android:textColor="@color/text_color"
                 app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                 app:layout_constraintEnd_toEndOf="@+id/progressBar"
                 app:layout_constraintStart_toStartOf="@+id/progressBar"
@@ -102,11 +102,11 @@
                 android:layout_marginEnd="@dimen/small_margin"
                 android:progress="10"
 
-                app:indicatorColor="@color/splash_bg"
+                app:indicatorColor="@color/progress_color"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/centerGuide"
                 app:layout_constraintTop_toBottomOf="@+id/carbsTv"
-                app:trackColor="@color/chip_teal" />
+                app:trackColor="@color/white" />
 
             <TextView
                 android:id="@+id/trackCarb"
@@ -167,12 +167,12 @@
                 android:layout_height="4dp"
                 android:layout_marginEnd="@dimen/small_margin"
                 android:progress="10"
-                app:indicatorColor="@color/splash_bg"
+                app:indicatorColor="@color/progress_color"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/centerGuide"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="@dimen/large_margin"
-                app:trackColor="@color/chip_teal" />
+                app:trackColor="@color/white" />
 
             <TextView
                 android:id="@+id/trackFat"
@@ -215,6 +215,11 @@
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="@string/breakfast"
+            android:textColor="@color/color_text_chip"
+            app:chipBackgroundColor="@color/yello_light"
+            app:checkedIconTint="@color/color_text_chip"
+            app:chipStrokeWidth="1dp"
+            app:chipStrokeColor="#DAE4E5"
             app:layout_constraintEnd_toStartOf="@+id/lunchChip"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardGuide"
@@ -226,6 +231,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lunch"
+            android:textColor="@color/color_text_chip"
+            app:chipBackgroundColor="@color/yello_light"
+            app:checkedIconTint="@color/color_text_chip"
             app:layout_constraintEnd_toStartOf="@+id/dinnerChip"
             app:layout_constraintStart_toEndOf="@+id/breakfastChip"
             app:layout_constraintTop_toBottomOf="@+id/cardGuide" />
@@ -236,6 +244,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dinner"
+            android:textColor="@color/color_text_chip"
+            app:chipBackgroundColor="@color/yello_light"
+            app:checkedIconTint="@color/color_text_chip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/lunchChip"
             app:layout_constraintTop_toBottomOf="@+id/cardGuide" />
@@ -247,8 +258,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/healthy_recipes"
-        android:textSize="@dimen/headline_small"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mealChipGroup" />
@@ -290,7 +299,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
-        app:cardBackgroundColor="@color/lightGreenTheme"
+        app:cardBackgroundColor="@color/yello_light"
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -367,6 +376,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="489dp" />
+        app:layout_constraintGuide_begin="210dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
