--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -45,8 +45,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="@dimen/default_margin"
-        app:backgroundTint="@color/chip_teal"
+        app:backgroundTint="@color/yello_heavy"
         android:contentDescription="@string/add_to_meal"
-        app:srcCompat="@drawable/ic_baseline_add_24"/>
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        app:tint="@null"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
