--- a/app/src/main/res/layout/meal_item_layout.xml
+++ b/app/src/main/res/layout/meal_item_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/mealItem1Box"
         android:layout_width="380dp"
         android:layout_height="80dp"
-        android:background="@color/lightGreenTheme"
+        android:background="@color/yello_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +34,7 @@
         android:id="@+id/mealItem1Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/small_margin"
         android:layout_marginTop="@dimen/default_margin"
         android:fontFamily="sans-serif-medium"
         android:padding="2dp"
